# D7049E

./: .gitignore  Dependencies.lua  README.md  generate_linux_projects.sh  generate_win_projects.bat  premake5.lua  pyproject.toml
App/: premake5.lua
App/src/: ExampleApp.cpp  TestLayer.h
App/src/Materials/: Silver.h
App/src/Primitives/: Cuboid.cpp  Cuboid.h
Editor/: imgui.ini  premake5.lua
Editor/Resources/Icons/: FileIconTemplate.kra  UNREG.png~
Editor/Resources/Primitives/: Cylinder.fbx
Editor/Resources/Shaders/: default_static_shader.frag  default_static_shader.vert  depth_pre_pass.vert  dir_light_shadows.frag  dir_light_shadows.geo  dir_light_shadows.vert  env_brdf.frag  env_brdf.vert  (+11 more)
Editor/SandBox/: AssetRegistry.hvereg  SandBox.hveproject
Editor/shaders/: default_static_shader.frag  default_static_shader.vert  phong_material_shader.frag  phong_material_shader.vert
Editor/src/: Editor.cpp  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorResources.cpp  EditorResources.h
EditorLauncher/: imgui.ini  premake5.lua
EditorLauncher/src/: EditorLauncher.cpp  EditorLauncherLayer.cpp  EditorLauncherLayer.h
Engine/: premake5.lua
Engine/shaders/: line_shader.frag  line_shader.vert  monochrome_shader.frag  monochrome_shader.vert  phong_material_shader.frag  phong_material_shader.vert  point_shader.vert  texture_shader.frag  texture_shader.vert
Engine/src/: Core.h  Engine.h  pch.h
ScriptCore/: premake5.lua
ScriptCore/Source/: Main.cs
docs/source/: conf.py  config.py  engine.rst  index.rst  usage.rst  using_the_editor.rst
(+213 files in other folders)
