[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Helios"
authors = [
{name = "Ivan Sedelkin", email = "ivan.sedelkin9@gmail.com"}, 
{name = "Helge Lindgren", email = ""}, 
{name = "Mattias Öz", email = ""}, 
{name = "Alice Johansson", email = ""}
]
dynamic = ["version", "description"]